--- a/css/cssabout.css
+++ b/css/cssabout.css
@@ -3,7 +3,8 @@
 body{
     background-image: linear-gradient(#6e61da, #ffff);
     background-repeat: no-repeat;
-    height: 100vh;}
+    height: 100vh;
+}
 header{
     display:flex;
     flex-direction:column;
@@ -17,12 +18,13 @@ header >img{
     display: flex;
     margin-top: 15vh;
     justify-content:space-around;
+    align-items: stretch;
     width: 100vw;
 }
 .card{
     background-color:#00000069 ;
     width: 25vw;
-    height: 60vh;
+    padding-bottom: 1vh;
     border-radius: 8px;
     display: flex;
     flex-direction:column;
