--- a/css/style.css
+++ b/css/style.css
@@ -321,6 +321,11 @@ input[type=number] {
   background-color: gray;
   transition:0.2s;
   font-size: 2.1em;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
 }
 .donate-btn:hover{
   background-color: gray;
